# rez-chat

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  chat.html  electron-builder.yml  index.html  login.html  package-lock.json  package.json  profile.html  rust-toolchain.toml  tailwind.config.js  vite.config.js
docs/: CHAT_APP_SPEC.md  FLOW_AUDIT_2026-06-07.md  SECURITY_AUDIT.md
electron/: main.mjs  preload.cjs  preload.mjs  prepare-pack.mjs
public/: splash.html
scripts/: desktop-dev-profile.mjs  desktop-dev-three.mjs  desktop-dev-two.mjs  desktop-native-modules.mjs  dev-mesh.mjs  dev-two-clients.mjs  dev-two.mjs  fetch-sidecar-node.mjs  injectSri.js  two-node-real-test.mjs
src/: index.js  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: biometric.rs  commands.rs  keychain.rs  lib.rs  main.rs  migrate.rs  notify.rs  sidecar.rs  tray.rs  updater.rs
test/: _configUtil.js  _lifecycleUtil.js  architecture.final-cleanup.test.js  architecture.no-ipc-facade.test.js  architecture.views-strict.test.js  auth-screen.service.test.js  auth.flow.test.js  auth.selectAccount.intent.test.js  auth.unlock.offline.test.js  channels.catchup.test.js  channels.fanout-roundtrip.test.js  channels.server-service.test.js  channels.store.test.js  chat-server.identity.bip39.test.js  chat.boundary.no-core-imports.test.js  delivery-ack.roundtrip.test.js  desktop.auth-services.test.js  desktop.biometric-gate.test.js  desktop.bootstrap.test.js  desktop.bus-bridge.test.js  desktop.control-uplink.test.js  (+78 more)
(+360 files in other folders)
