[package]
name = "rez-chat-shell"
version = "0.5.1"
description = "Rez Chat desktop shell (Tauri)"
authors = ["Rez Protocol"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "rez_chat_shell"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-local-authentication = "0.3"
block2 = "0.6"
mac-notification-sys = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["linux-native-sync-persistent", "crypto-rust"] }

[target.'cfg(windows)'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_JobObjects",
  "Win32_System_Threading",
  "Win32_Security",
  "Security_Credentials_UI",
  "Foundation",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
